# SigmaChain-server

./: .env.model  .gitignore  LICENSE  NOTICE.md  README.md  alembic.ini  dev.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2fe7d0e6c141_changing_user_info_pk_to_user_id.py  2fe832711654_changing_activityassignees_pk.py  39fcce6e7c3c_form_pattern_nullable_form_field_id.py  4bdb0f8a3ba9_created_workflow_squema_and_request_.py  693c9cb1da72_added_form_field_input_type_enum_form_.py  a3416c043b66_initial_migration.py  ae911d837a00_added_order_to_field_option.py  b93c1e69a76c_add_on_delete_cascade_to_activity_id_on_.py  cff45632bdd3_added_activity_field_display_and_.py  d4fec24b8abb_feat_adding_secure_code_model.py  d98c9ea0bbcc_adding_enums_policy_group_and_user_.py  e7bc2834b3a1_on_delete_cascade_on_activity_field_.py  eb2ba73a6288_fix_enum_values_to_lower_case.py
src/core/config/: database.py
src/core/models/: admin_model.py  data_admin_model.py  information_admin_model.py  rol_admin_model.py  user_model.py
src/database/: __init__.py  configuration.py
src/database/extensions/: model_dict_extension.py
src/database/models/access_control/: enums.py  group.py  role.py  secure_code.py  user.py
src/database/models/workflow/: activity.py  enums.py  field_option.py  form_field.py  form_pattern.py  request_pattern.py
src/service_gateway/security/: authentication.py
src/utils/: email_sender.py  function_responses.py  http_exceptions.py  serializers.py  template_loader.py
templates/: secure_code_email.html
(+27 files in other folders)
