[tool.poetry]
name = "sigmachain-sever"
version = "0.1.0"
description = "The core of SigmaChain: robust server and API to manage requests and approval workflows in a secure and scalable architecture."
authors = ["SigmaChainOrg"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
